--- a/src/pages/home/Homie.css
+++ b/src/pages/home/Homie.css
@@ -287,7 +287,8 @@ body::-webkit-scrollbar {
   display: flex;
   /* flex-direction: column; */
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 5rem;
   padding: 0 20px;
 }
 
