--- a/src/pages/home/Homie.css
+++ b/src/pages/home/Homie.css
@@ -80,6 +80,7 @@ body::-webkit-scrollbar {
   justify-content: center; /* Center the content */
   gap: 30px;
   text-align: center; /* Center the text */
+  cursor: pointer;
 }
 
 .logo {
